Position infobar to avoid overlap nav-tab and toolbar
issue9620
review310511002

--- a/src/sao.less
+++ b/src/sao.less
@@ -889,12 +889,13 @@ input.column-boolean {
 }
 
 .infobar {
+    line-height: @line-height-computed;
     position: fixed;
-    top: 0px;
+    top: 65px;
     left: 50%;
     transform: translateX(-50%);
     z-index: 1000;
-    min-width: 50%;
+    min-width: 25%;
     text-align: center;
     font-size: @font-size-large;
 }
